# bananatube

./: .gitignore  Makefile  main.py  pyproject.toml  requirements.txt  test.html  yt_downloader.py
backend/src/app/core/: config.py
backend/src/app/utils/: utils.py
docker/: Dockerfile  docker-compose.yml
frontend/: package-lock.json  package.json
src/app/: main.py
src/app/api/api_v1/: api.py
src/app/api/api_v1/endpoints/: split.py
